welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:22: error: not found: value message
    case _ => message = arret = true
              ^